// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-level-unlock-latch.acceptance given: [journey] a level that poured is never re-gated when: [t0] l1 malfunctions, so l3 pours for the first time then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: l1-reviewer (l1, 0/2)
   │   ├─ malfunction 💥
   │   ├─ terminal — does not block higher levels
   │   ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.given.by_peer.l1-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.taken.by_self.l1-reviewer.md
   │
   ├─ r2: l3-reviewer (l3, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r002._.given.by_peer.l3-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r002._.taken.by_self.l3-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   ├─ options
   │  ├─ converge with the reviewer — yours to run, and the levels above stay unlocked
   │  │  └─ rhx route.stone.set --stone 1.execute --as absorbed --that <reviewer>
   │  ├─ overrule the malfunction — a human must grant
   │  │  └─ rhx route.stone.set --stone 1.execute --as overruled
   │  ├─ or fix the reviewer, then retry
   │  └─ a broken level never halts the drive — converge the level above it
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: l1-reviewer (l1, 0/2)
      │   │   ├─ malfunction 💥
      │   │   ├─ terminal — does not block higher levels
      │   │   ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.given.by_peer.l1-reviewer.md
      │   │   └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r001._.taken.by_self.l1-reviewer.md
      │   └─ r2: l3-reviewer (l3, 1/5)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r002._.given.by_peer.l3-reviewer.md
      │       └─ taken: .reviews/peer/1.execute._.review.i001.8739656801d5e77f22.r002._.taken.by_self.l3-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-level-unlock-latch.acceptance given: [journey] a level that poured is never re-gated when: [t0] l1 malfunctions, so l3 pours for the first time then: the pour announce has good vibes 1`] = `
[
  "🦉 l1 pours 1 lane",
  "   └─ r1:l1-reviewer",
  "🦉 l3 pours 1 lane",
  "   └─ r2:l3-reviewer",
]
`;

exports[`driver.route.peer-level-unlock-latch.acceptance given: [journey] a level that poured is never re-gated when: [t1] l1 is repaired and now rejects — non-terminal again then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: l1-reviewer (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.l1-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.l1-reviewer.md
   │
   ├─ r2: l3-reviewer (l3, 2/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r002._.given.by_peer.l3-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r002._.taken.by_self.l3-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (2 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: l1-reviewer (l1, 1/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.l1-reviewer.md
      │   │   └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.l1-reviewer.md
      │   └─ r2: l3-reviewer (l3, 2/5)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r002._.given.by_peer.l3-reviewer.md
      │       └─ taken: .reviews/peer/1.execute._.review.i002.dfc5faff83ea2fcb55.r002._.taken.by_self.l3-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (2 > 0)
"
`;

exports[`driver.route.peer-level-unlock-latch.acceptance given: [journey] a level that poured is never re-gated when: [t1] l1 is repaired and now rejects — non-terminal again then: the pour announce has good vibes 1`] = `
[
  "🦉 l1 pours 1 lane",
  "   └─ r1:l1-reviewer",
  "🦉 l3 pours 1 lane",
  "   └─ r2:l3-reviewer",
]
`;

exports[`driver.route.peer-level-unlock-latch.acceptance given: [journey] a level that poured is never re-gated when: [t2] the stone is rewound then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: l1-reviewer (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.457fd5ef46e053a35e.r001._.given.by_peer.l1-reviewer.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.457fd5ef46e053a35e.r001._.taken.by_self.l1-reviewer.md
   │
   ├─ r2: l3-reviewer (l3, 0/5)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: l1-reviewer (l1, 1/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.execute._.review.i001.457fd5ef46e053a35e.r001._.given.by_peer.l1-reviewer.md
      │   │   └─ taken: .reviews/peer/1.execute._.review.i001.457fd5ef46e053a35e.r001._.taken.by_self.l1-reviewer.md
      │   └─ r2: l3-reviewer (l3, 0/5)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-level-unlock-latch.acceptance given: [journey] a level that poured is never re-gated when: [t2] the stone is rewound then: the pour announce has good vibes 1`] = `
[
  "🦉 l1 pours 1 lane",
  "   └─ r1:l1-reviewer",
]
`;
